--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,7 +10,7 @@ assignees:
   - JNajera
 status-website:
   cname: status.actiun.com
-  logoUrl: https://raw.githubusercontent.com/actiun/actiun-status/master/assets/actiun-logo.png
+  logoUrl: https://raw.githubusercontent.com/actiun/actiun-status/master/assets/actiun-logo.svg
   favicon: https://raw.githubusercontent.com/actiun/actiun-status/master/assets/actiun-favicon.ico
   name: ''
   theme: light
