--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,7 +13,7 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/actiun/actiun-status/master/assets/actiun-logo.svg
   favicon: https://raw.githubusercontent.com/actiun/actiun-status/master/assets/actiun-favicon.ico
   name: ''
-  theme: ocean
+  theme: light
   introTitle: "Sobre este sitio"
   introMessage: Bienvenido al monitor de estatus de Actiun. Aquí encontrarás información en tiempo real sobre el estado de nuestros servicios.
   navbar:
